--- a/02_photometry.ipynb
+++ b/02_photometry.ipynb
@@ -139,46 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    ms_source_id        wd_source_id    ...         wd_b        uses_sdss5\n",
-      "------------------- ------------------- ... ------------------- ----------\n",
-      "  78630547564037504   78630783787018624 ...  -43.94621045934461        0.0\n",
-      "  90243761175084672   90244375354955392 ...  -44.60031645677885        0.0\n",
-      "  91690164426524288   91690164426711040 ... -42.932042516885794        0.0\n",
-      " 235840678609579904  235840781689958016 ... -15.142418794667933        0.0\n",
-      " 290678443086494848  290678477446232960 ...  -37.92124428204657        0.0\n",
-      " 299817274499164416  299817270203790464 ... -31.650726348757026        0.0\n",
-      " 300721519733864192  300721515441972608 ... -31.261650914977317        1.0\n",
-      " 361278462663417088  361278458368372992 ... -29.894258797869995        0.0\n",
-      " 520790043347308416  520790043346964608 ...    7.43745748400846        1.0\n",
-      " 545940409758573824  545940164944375296 ...  11.629824001353866        1.0\n",
-      "                ...                 ... ...                 ...        ...\n",
-      "6339275457204986496 6339275452909996544 ...   46.42986440309833        1.0\n",
-      "6431084502029884672 6431084300169300224 ... -34.256776734072105        1.0\n",
-      "6886973358987025280 6886973535081311872 ... -32.765218592475264        1.0\n",
-      "6898255177217733504 6898255177217741952 ... -37.876674587102904        1.0\n",
-      "6898705805186335488 6898705800892401280 ...  -35.29774896286738        1.0\n",
-      "6899127089938464512 6899127085644261632 ...  -36.77209880350085        1.0\n",
-      "6899213710839008256 6899212229075129344 ...  -36.68885192818693        1.0\n",
-      "6908406487039810432 6908407066861225728 ... -25.951344093069274        0.0\n",
-      "6910806102448648576 6910805342238827648 ... -33.975549287596245        0.0\n",
-      "6915121788667377920 6915121784373453184 ... -26.839782349069086        1.0\n",
-      "6915495141584244480 6915495141583341824 ... -30.437088091626418        1.0\n",
-      "Length = 613 rows\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(catalog)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -191,7 +157,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:03<00:00,  1.78it/s]\n"
+      "100%|██████████| 7/7 [00:04<00:00,  1.68it/s]\n"
      ]
     }
    ],
@@ -240,7 +206,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:03<00:00,  1.91it/s]\n"
+      "100%|██████████| 7/7 [00:03<00:00,  1.86it/s]\n"
      ]
     }
    ],
@@ -262,6 +228,47 @@
     "    gaia_d1.rename_column(key, 'wd_' + key)\n",
     "    \n",
     "catalog = join(catalog, gaia_d1, keys = 'wd_source_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wd_phot_g_mean_flux_error\n",
+      "       electron / s      \n",
+      "-------------------------\n",
+      "                0.9378055\n",
+      "                0.9378143\n",
+      "                6.0286407\n",
+      "                1.1094007\n",
+      "                2.8560224\n",
+      "                1.0148256\n",
+      "                 1.337438\n",
+      "                0.5313873\n",
+      "                 7.857342\n",
+      "               0.80753857\n",
+      "                      ...\n",
+      "                2.1676195\n",
+      "                1.9567437\n",
+      "                2.2455158\n",
+      "                1.9185841\n",
+      "                0.8264333\n",
+      "                0.8089021\n",
+      "               0.79298866\n",
+      "                3.7183948\n",
+      "               0.82453007\n",
+      "               0.99284786\n",
+      "Length = 613 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(catalog['wd_phot_g_mean_flux_error'])"
    ]
   },
   {
